--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,254 @@
-body {
-    background-color: gray;
+/* #region Common */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+li {
+    list-style: none;
+}
+
+img {
+    max-width: 100%;
+}
+
+p {
+    font-size: 0.8rem;
+}
+
+/* #endregion Common */
+
+/* #region Utility */
+:root {
+    --dc-primary: #0282f9;
+    --dc-secondary: #303030;
+    --dc-dark: #1c1c1c;
+    --dc-light: #ffff;
+    --dc-lightgray: #717d7d;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-light {
+    color: var(--dc-light);
+}
+
+.text-secondary {
+    color: var(--dc-secondary);
+}
+
+.bg-white {
+    background-color: var(--dc-light);
+}
+
+.bg-primary {
+    background-color: var(--dc-primary);
+}
+
+.bg-secondary {
+    background-color: var(--dc-secondary);
+}
+
+.bg-light {
+    background-color: var(--dc-light);
+}
+
+.btn {
+    border: none;
+    background-color: transparent;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+.btn-primary {
+    background-color: var(--dc-primary);
+    color: var(--dc-light);
+}
+
+.position-relative {
+    position: relative;
+}
+
+.position-fixed {
+    position: fixed;
+}
+
+.z-n1 {
+    z-index: 9999;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-between {
+    justify-content: space-between;
+}
+
+.justify-content-end {
+    justify-content: end;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.align-items-end {
+    align-items: end;
+}
+
+.gap-1 {
+    gap: 0.5rem;
+}
+
+.gap-3 {
+    gap: 1.5rem;
+}
+
+.p-1 {
+    padding: 0.5rem;
+}
+
+.p-2 {
+    padding: 1rem;
+}
+
+.p-3 {
+    padding: 1.5rem;
+}
+
+.pr-3 {
+    padding-right: 1.5rem;
+}
+
+.pt-3 {
+    padding-top: 1.5rem;
+}
+
+.pt-5 {
+    padding-top: 2.5rem;
+}
+
+.pt-6 {
+    padding-top: 3rem;
+}
+
+.pt-10 {
+    padding-top: 5rem;
+}
+
+.pt-15 {
+    padding-top: 7.5rem;
+}
+
+.pb-1 {
+    padding-bottom: 0.5rem;
+}
+
+.pb-2 {
+    padding-bottom: 1rem;
+}
+
+.pb-3 {
+    padding-bottom: 1.5rem;
+}
+
+.pb-4 {
+    padding-bottom: 2rem;
+}
+
+.mt-3 {
+    margin-top: 1.5rem;
+}
+
+.mb-3 {
+    margin-bottom: 1.5rem;
+}
+
+.mb-6 {
+    margin-bottom: 3rem;
+}
+
+/* #endregion Utility */
+
+/* #region Layout */
+.container {
+    width: 60%;
+    max-width: 1152px;
+    margin: auto
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -1rem
+}
+
+.col-3 {
+    width: calc((100% / 12) * 3);
+}
+
+.col-4 {
+    width: calc((100% / 12) * 4);
+}
+
+.col-6 {
+    width: calc((100% / 12) * 6);
+
+}
+
+.col-8 {
+    width: calc((100% / 12) * 8);
+}
+
+.col-9 {
+    width: calc((100% / 12) * 9);
+}
+
+.col-12 {
+    width: 100%;
+}
+
+[class^="col-"] {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+/* #endregion Layout */
+
+/* #region Header */
+
+.jumbotron {
+    height: 20rem;
+    background-image: url(../images/jumbotron.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* #endregion Header */
