add card add static img at foreach (for test) sintax error for print dynamic img with foreach

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -252,3 +252,17 @@ p {
 }
 
 /* #endregion Header */
+
+/* #region Store */
+.card {
+    color: var(--dc-light);
+}
+
+.card img {
+    width: 100%;
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: top;
+}
+
+/* #endregion Store */
